After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736192 - avidemux: some AVI files crash (regression)
avidemux: some AVI files crash (regression)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.4.1
Other Linux
: Normal critical
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-06 15:00 UTC by L. López
Modified: 2014-09-07 11:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Backtrace from gdb (7.76 KB, text/plain)
2014-09-06 15:01 UTC, L. López
Details
Detailed backtrace (5.54 KB, text/plain)
2014-09-06 15:40 UTC, L. López
Details

Description L. López 2014-09-06 15:00:40 UTC
Some avi files causes gstavi element to crash with a segfault.

All programs using gstreamer 1.4.1 are crashing due to this bug p.ex. totem or shotwell.

Those AVI are very old, +10 years may be, and were produced by cheap digital cameras from that time.

I also reproduced the bug with gst-launch. VLC can reproduce them without major issues. 

I have some samples to reproduce the bug but they are personal files and I'm not going to upload them. However I can send them individually to some developer.

* Backtrace: attached

* Distribution: Debian testing

* Related packages:
ii  gstreamer1.0-clutter                         2.0.12-1                          amd64        Clutter PLugin for GStreamer 1.0
ii  gstreamer1.0-libav:amd64                     1.4.1-1.1                         amd64        libav plugin for GStreamer
ii  gstreamer1.0-nice:amd64                      0.1.7-1                           amd64        ICE library (GStreamer plugin)
ii  gstreamer1.0-plugins-bad:amd64               1.4.1-1                           amd64        GStreamer plugins from the "bad" set
ii  gstreamer1.0-plugins-base:amd64              1.4.1-1                           amd64        GStreamer plugins from the "base" set
ii  gstreamer1.0-plugins-good:amd64              1.4.1-1                           amd64        GStreamer plugins from the "good" set
ii  gstreamer1.0-plugins-ugly:amd64              1.4.1-1                           amd64        GStreamer plugins from the "ugly" set
ii  gstreamer1.0-pulseaudio:amd64                1.4.1-1                           amd64        GStreamer plugin for PulseAudio
ii  gstreamer1.0-x:amd64                         1.4.1-1                           amd64        GStreamer plugins for X11 and Pango
ii  libgstreamer1.0-0:amd64                      1.4.1-1                           amd64        Core GStreamer libraries and elements
Comment 1 L. López 2014-09-06 15:01:10 UTC
Created attachment 285571 [details]
Backtrace from gdb
Comment 2 Tim-Philipp Müller 2014-09-06 15:25:30 UTC
If you could upload them somewhere (dropbox or so) and send me a link that would be appreciated, thanks.

The stack trace does not show the actual crash, please use 'thread apply all bt' next time so it shows all threads.
Comment 3 L. López 2014-09-06 15:40:44 UTC
Created attachment 285574 [details]
Detailed backtrace
Comment 4 L. López 2014-09-06 15:42:43 UTC
Thanks for the tip for gdb.

I uploaded an updated backtrace and send you a link to the sample file.
Comment 5 Tim-Philipp Müller 2014-09-07 11:54:12 UTC
commit 7271ff253bc982d360c8a644ddbffcd91fc683d7
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Sun Sep 7 12:46:08 2014 +0100

    avidemux: fix crash with certain videos
    
    This is a regression from 1.2 caused by the port
    to the pad flow combiner.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736192